--- a/public/styles/goalfacefb.css
+++ b/public/styles/goalfacefb.css
@@ -472,5 +472,26 @@
     width: 500px;
 }
 
+/* Pulse Activities */
+#PulseDetailWrapper {
+    background-color: #FFFFFF;
+    border: 1px solid #6F9BBC;
+    clear: left;
+    font-size: 12px;
+    overflow: hidden;
+    padding: 20px 15px;
+    width: 680px;
+}
 
+ul#ActivityDetailList {
+    background-image: none;
+    height: auto;
+    padding: 20px;
+}
 
+ul#ActivityDetailList li {
+    background-repeat: no-repeat;
+    clear: both;
+    margin: 0 0 20px;
+    padding: 0 0 20px 65px;
+}
